2011-05-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* NSTextView-test/NSTextView-test.m: Test links (add a link on the
	second word of the lorem ipsum text to a wikipedia article)

2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* PixelExactDrawing-test: Add a new test case.

2011-05-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* PixelExactDrawing-test: Add a new test

2011-04-30  Eric Wasylishen  <ewasylishen@gmail.com>

	* MainMenu.gorm: Add an Edit and a Format menu.

2011-04-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* NSTextView-test/NSTextView-test.m: Test multiple layout managers
	per text storage, and multiple text views per layout manager.

2010-07-26  Fred Kiefer  <FredKiefer@gmx.de>

	* KeyboardInput-test/ConvertKeys.m: Correct setting for backspace key.

2010-07-25  Fred Kiefer  <FredKiefer@gmx.de>

	* KeyboardInput-test/ConvertKeys.m: Add support for backtab character.

2010-06-15 Riccardo Mottola

	* NSProgressIndicator-test:
	Added new test for the progress indicator

2010-04-14  Eric Wasylishen <ewasylishen@gmail.com>

	* Controller.m: On MinGW, display a main window so GSTest
	can be run when the WinUXTheme is enabled.
	* NSButton-test/NSButton-test.m: Add tooltips to the buttons.
	This is to demonstrate a bug I am reporting.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Show an NSPushOnPushOff button,
	as well as a disabled button.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSWindowStyleMask-test/NSWindowStyleMask-test.m: Tweak to allow
	creating NSPanels, and allow setting the new NSWindow and NSPanel
	style masks.
	Also added a close button and descriptive label to the created
	windows.

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Add NSPopUpButton and NSComboBox

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>

	* NSButton-test/NSButton-test.m: Show some NSSegmentedControls

2010-01-28 Eric Wasylishen <ewasylishen@gmail.com>
