@@ -1,3 +1,14 @@
+2011-06-08  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* ImageSelection-test: New test to test how NSImage chooses
+	an image rep to draw when many are available. Only a basic
+	skeleton of a test is written so far.
+
+	This should include testing: ICNS files with multiple icon sizes,
+	TIFF files with	multiple icon sizes and the same DPI, TIFF files
+	with multiple simage izes and different DPI (e.g. 64x64@72dpi
+	and 256x256@288dpi)
+
 2011-05-15  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* NSTextView-test/NSTextView-test.m: Test links (add a link on the
